--- a/dataDownload_XNAT.ipynb
+++ b/dataDownload_XNAT.ipynb
@@ -23,20 +23,7 @@
     "Version 2.0 ~ Niall Bourke  \n",
     "Updated 28/02/2019  \n",
     " \n",
-    "\n",
-    "\n",
-    "This scripts downloads DICOM data from XNAT according to users specifications.\n",
-    "\n",
-    "\n",
-    "Pre-requisites:\n",
-    "\n",
-    "-Need to think carefully which data you need from XNAT\n",
-    "-Pyxnat 1.0.1 needs to be installed (with conda)\n",
-    "\n",
-    "Scripts needed for it to work:\n",
-    "\n",
-    "- XDC function is required locally to donload csv files for indexing (could be done manually)\n",
-    "- The BIDS formating is done with a bash function, saved in dependencies\n"
+    "This scripts downloads DICOM data from XNAT according to users specifications.\n"
    ]
   },
   {
@@ -48,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,12 +47,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Introduce your XNAT login details (same as college credentials) and project folder (can use BIGBUCKET)"
+    "### Introduce your XNAT login details (same as college credentials) and project folder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,21 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INPUT\n",
-      "Server:  http://cif-xnat.hh.med.ic.ac.uk\n",
-      "Username:  nbourke\n",
-      "Password:  *********\n",
-      "ProjectID:  TauTBI\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print 'INPUT'\n",
     "print 'Server: ', server\n",
@@ -109,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,51 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CIF1501 1/35\n",
-      "CIF1502 2/35\n",
-      "CIF1411 3/35\n",
-      "CIF1446 4/35\n",
-      "CIF1464 5/35\n",
-      "CIF0876 6/35\n",
-      "CIF0910 7/35\n",
-      "CIF0957 8/35\n",
-      "CIF0958 9/35\n",
-      "CIF0971 10/35\n",
-      "CIF1012 11/35\n",
-      "CIF1013 12/35\n",
-      "CIF1101 13/35\n",
-      "CIF1072 14/35\n",
-      "CIF1156 15/35\n",
-      "CIF1154 16/35\n",
-      "CIF1164 17/35\n",
-      "AJ_BRAINSTIM 18/35\n",
-      "CIF1389 19/35\n",
-      "CIF1467 20/35\n",
-      "CIF1474 21/35\n",
-      "CIF1476 22/35\n",
-      "CIF1492 23/35\n",
-      "CIF1230 24/35\n",
-      "CIF1257 25/35\n",
-      "CIF1285 26/35\n",
-      "CIF1286 27/35\n",
-      "CIF1324 28/35\n",
-      "CIF1331 29/35\n",
-      "CIF1348 30/35\n",
-      "CIF1512 31/35\n",
-      "CIF1374 32/35\n",
-      "CIF1375 33/35\n",
-      "CIF1379 34/35\n",
-      "CIF1551 35/35\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i, subject in enumerate(subjects):\n",
     "    label = central.select.project(projectID).subject(subject).label()\n",
@@ -190,17 +123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Directory ', '/rds/general/project/c3nl_djs_imaging_data/live/data/raw/TauTBI', ' Created ')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dirName = os.path.join('/rds/general/project/c3nl_djs_imaging_data/live/data/raw/', projectID)\n",
     "#print dirName\n",
@@ -227,87 +152,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "CIF1501 CIF_E03899\n",
-      "\n",
-      "CIF1502 CIF_E03901\n",
-      "\n",
-      "CIF1411 CIF_E03525\n",
-      "\n",
-      "CIF1446 CIF_E03664\n",
-      "\n",
-      "CIF1464 CIF_E03722\n",
-      "\n",
-      "CIF0876 CIF_E01818\n",
-      "\n",
-      "CIF0910 CIF_E01846\n",
-      "\n",
-      "CIF0957 CIF_E02025\n",
-      "\n",
-      "CIF0958 CIF_E02033\n",
-      "\n",
-      "CIF0971 CIF_E02116\n",
-      "\n",
-      "CIF1012 CIF_E02245\n",
-      "\n",
-      "CIF1013 CIF_E02246\n",
-      "\n",
-      "CIF1101 CIF_E02550\n",
-      "\n",
-      "CIF1072 CIF_E02420\n",
-      "\n",
-      "CIF1156 CIF_E02699\n",
-      "\n",
-      "CIF1154 CIF_E02693\n",
-      "\n",
-      "CIF1164 CIF_E02741\n",
-      "\n",
-      "AJ_BRAINSTIM CIF_E02858\n",
-      "\n",
-      "CIF1389 CIF_E03214\n",
-      "\n",
-      "CIF1467 CIF_E03739\n",
-      "\n",
-      "CIF1474 CIF_E03760\n",
-      "\n",
-      "CIF1476 CIF_E03770\n",
-      "\n",
-      "CIF1492 CIF_E03844\n",
-      "\n",
-      "CIF1230 CIF_E02973\n",
-      "\n",
-      "CIF1257 CIF_E03040\n",
-      "\n",
-      "CIF1285 CIF_E03129\n",
-      "\n",
-      "CIF1286 CIF_E03133\n",
-      "\n",
-      "CIF1324 CIF_E03277\n",
-      "\n",
-      "CIF1331 CIF_E03296\n",
-      "\n",
-      "CIF1348 CIF_E03401\n",
-      "\n",
-      "CIF1512 CIF_E03249\n",
-      "\n",
-      "CIF1374 CIF_E02908\n",
-      "\n",
-      "CIF1375 CIF_E02922\n",
-      "\n",
-      "CIF1379 CIF_E03018\n",
-      "\n",
-      "CIF1551 CIF_E03919\n",
-      "The total number of scanning sessions downloaded is = 35\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "subjectCounter = 0\n",
     "for s, subjectID in enumerate(subjects):\n",
@@ -335,20 +182,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sweet now we're rolling! \n",
+    "## Sweet now we're rolling! \n",
     "To make life easy all our labs notebooks are going assume a BIDS format.\n",
     "As data curating can be a pain in the derrière, lets run a nice little function to sort that for us ;)\n",
     "\n",
-    "#### A CIF_config.json has been created to match MRI acquisitions and label them in the correct format. \n"
+    "## Extracting and indexing data from xnat\n",
+    "\n",
+    "#### 1: bids_1_preproc -i project\n",
+    "    Indexes files downloaded from XNAT with more meaningfull lables such as participant ID and scan session.  \n",
+    "    This sets up the initial file structure to run the conversion to BIDS  \n",
+    "    \n",
+    "#### 2: bids_2_proc -i project  \n",
+    "    Loops over all subjects->sessions->modalities->scans and converts DICOMS to NIFTI.   \n",
+    "    The labels for each of the scans on the scan card are then converted to match the BIDS format and file structure  \n",
+    "    \n",
+    "## Dependencies\n",
+    "\n",
+    "##### A CIF_config.json has been created to match MRI acquisitions and label them in the correct format. \n",
+    "This may need to be update if new seqences are being collected. \n",
+    "\n",
+    "##### Index files\n",
+    "I have used XDC to pull metaData about scan labels from xnat. This requires local setup. I have a copy of this function that runs through the TBI list. If the data is not in the imaging directory let me know and I could add this and run through it. \n",
+    "\n",
+    "The following XDC function can be used to pull project and subject information from xnat\n",
+    "I have done this locally and saved an indexing function in c3nl_tools\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### The following XDC function can be used to pull project and subject information from xnat\n",
-    "I have done this locally and saved an indexing function in c3nl_tools"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -356,28 +219,6 @@
    "source": [
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Extracting and indexing data from xnat\n",
-    "\n",
-    "#### 1: bids_preproc.sh  \n",
-    "    Indexes files downloaded from XNAT with more meaningfull lables such as participant ID and scan session.  \n",
-    "    This sets up the initial file structure to run the conversion to BIDS  \n",
-    "    \n",
-    "#### 2: bidsProc2.sh  \n",
-    "    Loops over all subjects->sessions->modalities->scans and converts DICOMS to NIFTI.   \n",
-    "    The labels for each of the scans on the scan card are then converted to match the BIDS format and file structure  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
