--- a/XNAT-Download.ipynb
+++ b/XNAT-Download.ipynb
@@ -450,7 +450,7 @@
     "java -jar /rds/general/project/c3nl_shared/live/dependencies/data-client-shadow-1.7.6/lib/XnatDataClient-1.7.6-all.jar -u ${username} -p ${password} -r ${input2} -o ${path}/${ID}_subject\n",
     "\n",
     "# Set job script\n",
-    "echo \"source activate py27; ${dep}/xnat2bids/CIF_unzip -i ${ID}; ${dep}/xnat2bids/bids_beta -i ${ID} -c CIF_config.json\" > ${path}/bidJob.txt\n",
+    "echo \"source activate py27; ${dep}/xnat2bids/lib/CIF_unzip -i ${ID}; ${dep}/xnat2bids/lib/bids_beta -i ${ID} -c CIF_config.json\" > ${path}/bidJob.txt\n",
     "\n",
     "# Run job\n",
     "${dep}/hpcSubmit ${path}/bidJob.txt 12:00:00 3 6Gb\n",
