update to submission path, jq install

--- a/XNAT-Download-py35.ipynb
+++ b/XNAT-Download-py35.ipynb
@@ -41,7 +41,7 @@
     ">conda create -n py35 python=3.5 ipykernel  \n",
     ">source activate py35  \n",
     ">pip install pyxnat  \n",
-    ">pip install jq  "
+    ">conda install jq  #pip install jq  "
    ]
   },
   {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -431,26 +431,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "input is = /rds/general/project/c3nl_djs_imaging_data/live/data/indexFiles/bidJob.txt\n",
+      "input is = /rds/general/user/nbourke/home/repos/xnat2bids/bidJob.txt\n",
       "Walltime = 12:00:00\n",
       "Number of CPUs = 3\n",
       "Memory = 6Gb\n",
       "WARNING: only one job submitted!\n",
       "Check this correct\n",
-      "Job submitted: Wed  3 Aug 10:29:58 BST 2022\n",
-      "5972448.pbs\n",
+      "Job submitted: Fri 12 Aug 09:58:12 BST 2022\n",
+      "6032633.pbs\n",
       "\n",
       "***\n",
       "\n",
       "Submitted commands:\n",
-      " \n"
+      "source activate py35; /rds/general/user/nbourke/home/repos/xnat2bids/lib/CIF_unzip_Study__ -i Study__AMR; /rds/general/user/nbourke/home/repos/xnat2bids/lib/bids_proc_Study__ -i Study__AMR -c CIF_config.json\n"
      ]
     },
     {
@@ -510,6 +510,7 @@
     "path=/rds/general/project/c3nl_djs_imaging_data/live/data/indexFiles\n",
     "dep=/rds/general/project/c3nl_shared/live/dependencies\n",
     "cwd=$(pwd)\n",
+    "job=${cwd}/bidJob.txt\n",
     "\n",
     "# Find index from xnat\n",
     "input1=\"http://wmec-transtec1.hh.med.ic.ac.uk:/data/archive/projects/\"${ID}\"/experiments?format=csv\"\n",
@@ -520,11 +521,14 @@
     "java -jar /rds/general/project/c3nl_shared/live/dependencies/data-client-shadow-1.7.6/lib/XnatDataClient-1.7.6-all.jar -u ${username} -p ${password} -r ${input1} -o ${path}/${ID}_experiments  \n",
     "java -jar /rds/general/project/c3nl_shared/live/dependencies/data-client-shadow-1.7.6/lib/XnatDataClient-1.7.6-all.jar -u ${username} -p ${password} -r ${input2} -o ${path}/${ID}_subject\n",
     "\n",
+    "# CIF_unzip\n",
+    "# bids_proc \n",
+    "\n",
     "# Set job script\n",
-    "echo \"source activate py35; ${cwd}/lib/CIF_unzip -i ${ID}; ${cwd}/lib/bids_proc -i ${ID} -c CIF_config.json\" > ${path}/bidJob.txt\n",
+    "echo \"source activate py35; ${cwd}/lib/CIF_unzip_Study__ -i ${ID}; ${cwd}/lib/bids_proc_Study__ -i ${ID} -c CIF_config.json\" > ${job}\n",
     "\n",
     "# Run job\n",
-    "${dep}/hpcSubmit ${path}/bidJob.txt 12:00:00 3 6Gb\n",
+    "${dep}/hpcSubmit ${job} 12:00:00 3 6Gb\n",
     "echo \"\"; echo \"***\"; echo \"\"; echo \"Submitted commands:\"\n",
     "head ${job}\n",
     " "
